# fn-content-classifier

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  __init__.py  _gcloud.Dockerfile  _old_train.ipynb  actions_dataset_balance.ipynb  bodyparts_dataset_balance.ipynb  config.py  configs.py  convert_to_onnx.py  dataset.py  dataset_balance.ipynb  docker-compose.yml  gcloud.Dockerfile  gradio.py  inference.Dockerfile  inference.py  install_torch.sh  losses.py  main.py  metrics.py  model.py  model_convert.py  model_export.py  model_inference.py  model_train.ipynb  models.Dockerfile  notes.ipynb  pyproject.toml  requirements.txt  run_job.py  run_sweep.py  sweep_action.yaml  sweep_bodyparts.yaml  sweep_participants.yaml  sweep_positions.yaml  train.py  (+6 more)
datasets/: actions_major_dataset.parquet  actions_minor_dataset.parquet  bodyparts_minor_dataset.parquet  positions_minor_dataset.parquet
inference/: Makefile  app.py  gradio_app.py  image_processing.py  inference.py  main.py  model_loader.py  requirements.txt  responses.py  visualization.py
notebooks/: actions_dataset_balance.ipynb  bodyparts_dataset_balance.ipynb  dataset_balance.ipynb  find_lr.ipynb  images__actions.parquet  merged_dataset.ipynb  model_train.ipynb  notebook_utils.py  participants_dataset_balance.ipynb  positions_dataset_balance.ipynb
onnx/: action_convnextv2_nano_32_384_labels.json  bodyparts_convnextv2_nano_32_384_labels.json
scripts/: pull_git.sh  torch_check.sh  upload_images_to_hf.py
src/: convert_to_onnx.py  train_sweep.py
src/classifier/: __init__.py  configs.py  run_sweep.py  sweep_action.yaml  sweep_bodyparts.yaml  train.py  train_best_sweep.py
src/classifier/inference/: __init__.py  configs.py  download.py  file_loaders.py  image_processing.py  inference.py  inference_config.py  job_main.py  main.py  main_images.py  main_videos.py  model_loader.py  processing.py  utils.py  video_processing.py
src/classifier/training/: __init__.py  configs.py  dataset.py  find_batch_size.py  find_lr.py  losses.py  model_helpers.py  run_sweep.py  train.py  train_best_sweep.py  trainer.py
src/fn_classfier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/inference/: gradio_app.py  model_loader.py
src/training/: find_batch_size.py  losses.py  model_helpers.py  model_train.ipynb  utils.py
training/: config.py  dataset.py  find_batch_size.py  find_lr.ipynb  find_lr.py  metrics.py  model_helpers.py  model_train.ipynb  requirements.txt  trainer.py  utils.py
wrangling/: actions_dataset_balance.ipynb
