[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "classifier"
requires-python = ">=3.11"
version = "0.0.1"
description = "A package to train and inference image classification models."
dependencies = [
    "timm",
    "numpy",
    "pandas",
    "Pillow",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "scipy",
    "tqdm",
    "iterative-stratification",
    "wandb",
    "weave",
    "jupyter",
    "ipywidgets",
    "gradio",
    "onnx",
    "onnxscript",
    "onnxruntime",
    "torch-lr-finder",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "onnxruntime",
    "numpy",
    "Pillow",
    "pydantic",
]