[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "classifier"
requires-python = ">=3.11"
version = "0.0.1"
description = "A package to train and inference image classification models."
dependencies = [
    "numpy",
    "pydantic",
    "Pillow==12.0.0",
    "tqdm==4.67.1",
    "onnx==1.19.1",
    "onnxruntime==1.23.2",
    "pydantic-settings",
    "fastparquet==2024.11.0",
    "pyarrow==22.0.0",
]

[project.optional-dependencies]
training = [
    "timm==1.0.21",
    "pandas==2.3.3",
    "scikit-learn==1.7.2",
    "matplotlib==3.10.7",
    "seaborn==0.13.2",
    "scipy==1.16.3",
    "iterative-stratification==0.1.9",
    "wandb==0.22.3",
    "weave==0.52.11",
    "jupyter==1.1.1",
    "ipywidgets==8.1.7",
    "onnxscript==0.5.6",
    "torch-lr-finder==0.2.2",
    "python-multipart==0.0.20",
]
inference = [
    "opencv-python==4.12.0.88",
    "requests==2.32.5",
]